fixed styling for tile group on mobile

--- a/src/components/tileGroup/tileGroup.module.scss
+++ b/src/components/tileGroup/tileGroup.module.scss
@@ -1,9 +1,8 @@
 @import '../../themes/theme';
 
 .group {
-  column-gap: $spacing-300;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(26.25rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(15.625rem, 1fr));
   row-gap: $spacing-300;
   width: 100%;
 
@@ -21,25 +20,20 @@
 }
 
 .tile {
-  background-color: $tertiary-200;
   border-radius: $spacing-50;
   color: $text-color-100;
   display: flex;
   padding: $spacing-200;
   width: 100%;
-
-  &:hover > .img-container img {
-    transform: scale(1.3);
-  }
 }
 
 .img-container {
-  height: 18.75rem;
-  margin-right: $spacing-300;
-  min-width: 9.375rem;
+  border-radius: $spacing-50;
+  height: 11.25rem;
+  min-width: $spacing-800;
   overflow: hidden;
   position: relative;
-  width: 9.375rem;
+  width: $spacing-800;
 
   img {
     position: absolute;
@@ -48,22 +42,72 @@
   }
 }
 
+.content {
+  box-sizing: border-box;
+  padding-left: $spacing-150;
+}
+
 .name {
-  font-size: $font-size-500;
+  font-size: $font-size-400;
   font-weight: bold;
-  margin-bottom: $spacing-40;
+  margin-bottom: $spacing-20;
 }
 
 .location {
-  font-size: $font-size-200;
+  font-size: $font-size-100;
 }
 
 .book {
-  font-size: $font-size-500;
-  margin-top: $spacing-300;
+  font-size: $font-size-400;
+  margin-top: $spacing-200;
 }
 
 .author {
-  font-size: $font-size-400;
-  margin-top: $spacing-50;
+  font-size: $font-size-300;
+  margin-top: $spacing-40;
+}
+
+@media screen and (min-width: $bp-100) {
+  .group {
+    column-gap: $spacing-300;
+    grid-template-columns: repeat(auto-fill, minmax(26.25rem, 1fr));
+  }
+
+  .tile {
+    padding: $spacing-200;
+
+    &:hover > .img-container img {
+      transform: scale(1.3);
+    }
+  }
+
+  .img-container {
+    height: 18.75rem;
+    margin-right: $spacing-300;
+    min-width: 9.375rem;
+    width: 9.375rem;
+  }
+
+  .content {
+    padding-left: $spacing-200;
+  }
+
+  .name {
+    font-size: $font-size-500;
+    margin-bottom: $spacing-40;
+  }
+
+  .location {
+    font-size: $font-size-200;
+  }
+
+  .book {
+    font-size: $font-size-500;
+    margin-top: $spacing-300;
+  }
+
+  .author {
+    font-size: $font-size-400;
+    margin-top: $spacing-50;
+  }
 }
